--- a/DesarrolloWeb/css/crearCuentaStyle.css
+++ b/DesarrolloWeb/css/crearCuentaStyle.css
@@ -29,7 +29,23 @@ header nav h1
     font-size: 75px;
 }
 
-main form h1
+.main 
+{
+    border:  1px solid black;
+    margin: 5px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(1, 400px);
+    gap: 10px;
+}
+
+.Area
+{
+    text-align: center;
+    border:  1px solid black;
+}
+
+main h1
 {
     color: rgb(12, 154, 193);
     font-size: 45px;
@@ -37,7 +53,7 @@ main form h1
     padding: 25px;
 }
 
-main form h2
+main h2
 {
     color: rgb(12, 154, 193);
     font-size: 35px;
@@ -45,72 +61,30 @@ main form h2
     word-spacing: 1000px;
 }
 
-main article form div.MiCuenta
+button
 {
-    padding-left: 630px;
-    font-size: 20px;
-    display: flex;
+    margin: 50px;
+    font-size: 30px;
+    color: white;
+    background-color: rgb(12, 154, 193);
 }
 
-main article form div.MiCuenta label.NuevoUsuario
-{
-    padding-left: 800px;
+label
+{   
+    font-size: 30px;
 }
 
-main article form div.MiCuentaInputField 
+input.Text
 {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 630px;
-    width: 1300px;
     height: 20px;
+    width: 500px;
 }
 
-main article form div.Contraseña
+main div.Area div.Registrarse p
 {
-    padding-left: 630px;
-    padding-bottom: 25px;
     font-size: 20px;
+    margin: 20px;
 }
 
-
-main article form div.Acceder
-{
-    padding-left: 760px;
-}
-
-main article form div.Acceder button
-{
-    width: 120px;
-    height: 40px;
-    font-size: 20px;
-    color: white;
-    background-color: rgb(12, 154, 193);
-}
-
-main article form div.Registrarse
-{
-    padding-left: 1765px;
-}
-
-main article form div.Registrarse button
-{
-    width: 120px;
-    height: 40px;
-    font-size: 20px;
-    color: white;
-    background-color: rgb(12, 154, 193);
-}
-
-main article form div.Recuerdame
-{ 
-    padding-left: 760px;
-    font-size: 20px;
-}
-
-main article form div.Recuerdame p.Instrucciones
-{ 
-    padding-left: 1005px;
-}
 
 
