grid on tienda.html

--- a/DesarrolloWeb/css/tiendaStyle.css
+++ b/DesarrolloWeb/css/tiendaStyle.css
@@ -38,10 +38,12 @@ h2
 
 main
 {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
+    border:  1px solid black;
+    margin: 5px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(2, 400px);
+    gap: 10px;
 }
 
 main section
