--- a/DesarrolloWeb/css/tiendaStyle.css
+++ b/DesarrolloWeb/css/tiendaStyle.css
@@ -13,6 +13,18 @@ header
 header nav 
 {
   text-align: center;
+  transition: box-shadow 0.3s ease-in-out;  
+}
+
+
+header nav a 
+{
+    text-decoration: none;
+}
+
+header nav a:hover
+{
+    text-decoration: underline;
 }
 
 
@@ -51,17 +63,22 @@ main section
     margin: 5px;
 }
 
+main section:hover
+{
+    box-shadow: 0 8px 16px rgb(0, 0, 0,2);
+}
+
 main section div
 {
-    width: 37.5rem;
     border: 1px solid black;
     border-radius: 10px;
-    background-color: rgb(177, 177, 177);
+    background-color: rgb(177, 177, 177);    
+    transition: box-shadow 0.3s ease-in-out;
 }
 
 main section div img
 {
     width: 100%;
-    height: 320px;
+    height: 100%;
     border-radius: 10px;
 }
