--- a/DesarrolloWeb/css/tiendaStyle.css
+++ b/DesarrolloWeb/css/tiendaStyle.css
@@ -1,83 +1,70 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
 }
 
-header
-{
+header {
     padding: 5px;
-    background-color:lightblue;
+    background-color: lightblue;
 }
 
-header nav 
-{
-  text-align: center;
-  transition: box-shadow 0.3s ease-in-out;  
+header nav {
+    text-align: center;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
 
-header nav a 
-{
+header nav a {
     text-decoration: none;
 }
 
-header nav a:hover
-{
+header nav a:hover {
     text-decoration: underline;
 }
 
 
-header nav a
-{
+header nav a {
     color: black;
     font-size: 35px;
     margin: 100px;
 }
 
-header nav h1
-{
+header nav h1 {
     color: rgb(12, 154, 193);
     font-size: 75px;
 }
 
-h2
-{
+h2 {
     text-align: center;
     font-size: 35px;
     color: rgb(12, 154, 193);
 }
 
-main
-{
-    border:  1px solid black;
+main {
+    border: 1px solid black;
     margin: 5px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 400px);
     gap: 10px;
 }
 
-main section
-{
+main section {
     margin: 5px;
 }
 
-main section:hover
-{
-    box-shadow: 0 8px 16px rgb(0, 0, 0,2);
+main section:hover {
+    box-shadow: 0 8px 16px rgb(0, 0, 0, 2);
 }
 
-main section div
-{
+main section div {
     border: 1px solid black;
     border-radius: 10px;
-    background-color: rgb(177, 177, 177);    
+    background-color: rgb(177, 177, 177);
     transition: box-shadow 0.3s ease-in-out;
 }
 
-main section div img
-{
+main section div img {
     width: 100%;
     height: 100%;
     border-radius: 10px;
