--- a/DesarrolloWeb/css/crearCuentaStyle.css
+++ b/DesarrolloWeb/css/crearCuentaStyle.css
@@ -69,15 +69,17 @@ main h2
 
 button
 {
+    height: 40px;
+    width: 150px;
     margin: 50px;
-    font-size: 30px;
+    font-size: 20px;
     color: white;
     background-color: rgb(12, 154, 193);
 }
 
 label
 {   
-    font-size: 30px;
+    font-size: 20px;
 }
 
 input.Text
